@@ -1,18 +1,18 @@
 package at.bitfire.davdroid.test;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 
 import android.util.Log;
 
 public class Constants {
 	public static final String ROBOHYDRA_BASE = "http://10.0.0.11:3000/";
 	
-	public static URI roboHydra;
+	public static URL roboHydra;
 	static {
 		try {
-			roboHydra = new URI(ROBOHYDRA_BASE);
-		} catch(URISyntaxException e) {
+			roboHydra = new URL(ROBOHYDRA_BASE);
+		} catch(MalformedURLException e) {
 			Log.wtf("davdroid.test.Constants", "Invalid RoboHydra base URL");
 		}
 	}
