@@ -7,10 +7,8 @@
  ******************************************************************************/
 package at.bitfire.davdroid.webdav;
 
-import java.io.IOException;
 import java.io.InputStream;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.Arrays;
 import java.util.List;
 
@@ -48,26 +46,26 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 				
 		assetMgr = getInstrumentation().getContext().getResources().getAssets();
 		
-		baseDAV = new WebDavResource(httpClient, Constants.roboHydra.resolve("/dav/"));
+		baseDAV = new WebDavResource(httpClient, new URL(Constants.roboHydra, "/dav/"));
 		
-		simpleFile = new WebDavResource(httpClient, new URI(Constants.ROBOHYDRA_BASE + "assets/test.random"));
+		simpleFile = new WebDavResource(httpClient, new URL(Constants.ROBOHYDRA_BASE + "assets/test.random"));
 		
-		davCollection = new WebDavResource(httpClient, new URI(Constants.ROBOHYDRA_BASE + "dav/"));
+		davCollection = new WebDavResource(httpClient, new URL(Constants.ROBOHYDRA_BASE + "dav/"));
 		davNonExistingFile = new WebDavResource(davCollection, "collection/new.file");
 		davExistingFile = new WebDavResource(davCollection, "collection/existing.file");
 		
-		davInvalid = new WebDavResource(httpClient, new URI(Constants.ROBOHYDRA_BASE + "dav-invalid/"));
+		davInvalid = new WebDavResource(httpClient, new URL(Constants.ROBOHYDRA_BASE + "dav-invalid/"));
 	}
 	
 	@Override
-	protected void tearDown() throws IOException {
+	protected void tearDown() throws Exception {
 		httpClient.close();
 	}
 
 
 	/* test feature detection */
 	
-	public void testOptions() throws URISyntaxException, IOException, HttpException {
+	public void testOptions() throws Exception {
 		String[]	davMethods = new String[] { "PROPFIND", "GET", "PUT", "DELETE", "REPORT" },
 					davCapabilities = new String[] { "addressbook", "calendar-access" };
 		
@@ -79,7 +77,7 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 			assert(capable.supportsDAV(capability));
 	}
 
-	public void testPropfindCurrentUserPrincipal() throws IOException, HttpException, DavException {
+	public void testPropfindCurrentUserPrincipal() throws Exception {
 		davCollection.propfind(HttpPropfind.Mode.CURRENT_USER_PRINCIPAL);
 		assertEquals("/dav/principals/users/test", davCollection.getCurrentUserPrincipal());
 		
@@ -92,14 +90,14 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 		assertNull(simpleFile.getCurrentUserPrincipal());
 	}
 		
-	public void testPropfindHomeSets() throws IOException, HttpException, DavException {
+	public void testPropfindHomeSets() throws Exception {
 		WebDavResource dav = new WebDavResource(davCollection, "principals/users/test");
 		dav.propfind(HttpPropfind.Mode.HOME_SETS);
 		assertEquals("/dav/addressbooks/test/", dav.getAddressbookHomeSet());
 		assertEquals("/dav/calendars/test/", dav.getCalendarHomeSet());
 	}
 	
-	public void testPropfindAddressBooks() throws IOException, HttpException, DavException {
+	public void testPropfindAddressBooks() throws Exception {
 		WebDavResource dav = new WebDavResource(davCollection, "addressbooks/test");
 		dav.propfind(HttpPropfind.Mode.CARDDAV_COLLECTIONS);
 		assertEquals(2, dav.getMembers().size());
@@ -112,7 +110,7 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 		}
 	}
 	
-	public void testPropfindCalendars() throws IOException, HttpException, DavException {
+	public void testPropfindCalendars() throws Exception {
 		WebDavResource dav = new WebDavResource(davCollection, "calendars/test");
 		dav.propfind(Mode.CALDAV_COLLECTIONS);
 		assertEquals(3, dav.getMembers().size());
@@ -126,7 +124,7 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 		}
 	}
 	
-	public void testPropfindTrailingSlashes() throws IOException, HttpException, DavException {
+	public void testPropfindTrailingSlashes() throws Exception {
 		final String principalOK = "/principals/ok";
 		
 		String requestPaths[] = {
@@ -146,22 +144,22 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 	
 	/* test normal HTTP/WebDAV */
 	
-	public void testPropfindRedirection() throws URISyntaxException, IOException, DavException, HttpException {
+	public void testPropfindRedirection() throws Exception {
 		// PROPFIND redirection
 		WebDavResource redirected = new WebDavResource(baseDAV, "/redirect/301?to=/dav/");
 		redirected.propfind(Mode.CURRENT_USER_PRINCIPAL);
 		assertEquals("/dav/", redirected.getLocation().getPath());
 	}
 	
-	public void testGet() throws URISyntaxException, IOException, HttpException, DavException {
+	public void testGet() throws Exception {
 		simpleFile.get("*/*");
 		@Cleanup InputStream is = assetMgr.open("test.random", AssetManager.ACCESS_STREAMING);
 		byte[] expected = IOUtils.toByteArray(is);
 		assertTrue(Arrays.equals(expected, simpleFile.getContent()));
 	}
 	
-	public void testGetHttpsWithSni() throws URISyntaxException, HttpException, IOException, DavException {
-		WebDavResource file = new WebDavResource(httpClient, new URI("https://sni.velox.ch"));
+	public void testGetHttpsWithSni() throws Exception {
+		WebDavResource file = new WebDavResource(httpClient, new URL("https://sni.velox.ch"));
 		
 		boolean	sniWorking = false;
 		try {
@@ -173,7 +171,7 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 		assertTrue(sniWorking);
 	}
 	
-	public void testMultiGet() throws DavException, IOException, HttpException {
+	public void testMultiGet() throws Exception {
 		WebDavResource davAddressBook = new WebDavResource(davCollection, "addressbooks/default.vcf");
 		davAddressBook.multiGet(DavMultiget.Type.ADDRESS_BOOK, new String[] { "1.vcf", "2.vcf" });
 		assertEquals(2, davAddressBook.getMembers().size());
@@ -182,7 +180,7 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 		}
 	}
 	
-	public void testPutAddDontOverwrite() throws IOException, HttpException {
+	public void testPutAddDontOverwrite() throws Exception {
 		// should succeed on a non-existing file
 		assertEquals("has-just-been-created", davNonExistingFile.put(SAMPLE_CONTENT, PutMode.ADD_DONT_OVERWRITE));
 		
@@ -194,7 +192,7 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 		}
 	}
 	
-	public void testPutUpdateDontOverwrite() throws IOException, HttpException {
+	public void testPutUpdateDontOverwrite() throws Exception  {
 		// should succeed on an existing file
 		assertEquals("has-just-been-updated", davExistingFile.put(SAMPLE_CONTENT, PutMode.UPDATE_DONT_OVERWRITE));
 		
@@ -206,7 +204,7 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 		}
 	}
 	
-	public void testDelete() throws IOException, HttpException {
+	public void testDelete() throws Exception {
 		// should succeed on an existing file
 		davExistingFile.delete();
 		
@@ -224,13 +222,13 @@ public class WebDavResourceTest extends InstrumentationTestCase {
 	
 	/* special test */
 	
-	public void testInvalidURLs() throws IOException, HttpException, DavException {
+	public void testInvalidURLs() throws Exception {
 		WebDavResource dav = new WebDavResource(davInvalid, "addressbooks/user%40domain/");
 		dav.propfind(HttpPropfind.Mode.CARDDAV_COLLECTIONS);
 		List<WebDavResource> members = dav.getMembers();
 		assertEquals(2, members.size());
 		assertEquals(Constants.ROBOHYDRA_BASE + "dav/addressbooks/user%40domain/My%20Contacts%3a1.vcf/", members.get(0).getLocation().toString());
-		assertEquals("HTTPS://example.com/user%40domain/absolute-url.vcf/", members.get(1).getLocation().toString());
+		assertEquals("https://example.com/user%40domain/absolute-url.vcf/", members.get(1).getLocation().toString());
 	}
 	
 }
